--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -21,7 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="60dp"
-        android:src="@drawable/logo2"
+        android:src="@mipmap/final_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
