--- a/app/src/main/res/layout/activity_add_store.xml
+++ b/app/src/main/res/layout/activity_add_store.xml
@@ -124,6 +124,7 @@
                                     android:imeOptions="actionNext"
                                     android:inputType="phone"
                                     android:maxLines="1"
+                                    android:maxLength="10"
                                     android:textSize="15sp" />
                             </com.google.android.material.textfield.TextInputLayout>
                         </LinearLayout>
