--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,10 +67,8 @@
 
                             <com.google.android.material.textfield.TextInputEditText
                                 android:id="@+id/txtEm"
-
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-
                                 android:fontFamily="@font/catamaran"
                                 android:imeOptions="actionNext"
                                 android:importantForAutofill="no"
@@ -134,7 +132,6 @@
 
                     <TextView
                         android:id="@+id/txtForgot"
-
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -142,18 +139,30 @@
                         android:text="Forgot Password?"
                         android:textColor="#32465B" />
 
-                </LinearLayout>
+                    <Button
+                        android:id="@+id/btnGoogle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="60dp"
+                        android:background="@color/white"
+                        android:paddingEnd="@dimen/_5sdp"
+                        android:paddingStart="@dimen/_5sdp"
+                        android:drawablePadding="@dimen/_5sdp"
+                        android:drawableStart="@drawable/ic_google"
+                        android:text="sign in with google"
+                        android:textAllCaps="false"
+                        android:textSize="16sp"/>
 
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="@dimen/_10sdp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_gravity="center_horizontal">
 
                     <TextView
 
-                              android:layout_width="wrap_content"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="@dimen/_5sdp"
