--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -19,31 +19,13 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="60dp"
-        android:src="@mipmap/final_logo"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="10dp"
+        android:src="@mipmap/couponbagimg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/dark_blue" />
-
-    <TextView
-        android:id="@+id/spTxt"
-        android:layout_width="363dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/bree_serif"
-        android:gravity="center_horizontal"
-        android:text="STOCARD"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="#342ea9"
-        android:textSize="30sp"
-        android:layout_marginBottom="@dimen/Dimen_40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageView
@@ -54,7 +36,7 @@
         android:layout_marginTop="20dp"
         android:src="@drawable/facebook"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spTxt">
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
     </ImageView>
 
@@ -66,7 +48,7 @@
         android:layout_marginTop="20dp"
         android:src="@drawable/twitter"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/spTxt"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
         />
 
     <ImageView
@@ -76,7 +58,7 @@
         android:layout_marginTop="20dp"
         android:src="@drawable/instagram"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/spTxt"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
        />
 
     <TextView
