--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,7 +31,9 @@
         <item name="colorPrimary">@color/white</item>
     </style>
 
-
+    <style name="btn_style" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@null</item>
+    </style>
     //Button Yellow
 
     <style name="Button_yellow_caps" parent="android:Widget.Button">
