--- a/app/src/main/res/layout/header_black_2.xml
+++ b/app/src/main/res/layout/header_black_2.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layoutHeaderBase"
-    android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:background="@color/dark_blue"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/txtTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:fontFamily="@font/catamaran"
-        android:paddingTop="@dimen/_3sdp"
-        android:elevation="0dp"
-        android:textColor="#ffffff"
-        android:textSize="@dimen/_20sdp"
-        android:textStyle="bold" />
+    <data>
 
-</RelativeLayout>
+    </data>
+
+    <RelativeLayout
+        android:id="@+id/layoutHeaderBase"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/dark_blue"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/txtTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:fontFamily="@font/catamaran"
+            android:paddingTop="@dimen/_3sdp"
+            android:elevation="0dp"
+            android:textColor="#ffffff"
+            android:textSize="@dimen/_20sdp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+</layout>
