--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -1,66 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frame"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    tools:context=".fragment.HomeScreenFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Update blank fragment layout -->
+    <data>
 
-<!--    <com.google.android.material.appbar.AppBarLayout-->
+    </data>
 
-<!--        android:id="@+id/appBarLayout"-->
-<!--        style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:fitsSystemWindows="true">-->
-
-<!--        <com.google.android.material.appbar.MaterialToolbar-->
-<!--            android:id="@+id/topAppBar"-->
-<!--            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="?attr/actionBarSize"-->
-<!--            android:background="@android:color/transparent"-->
-<!--            android:elevation="0dp"-->
-<!--            app:title="@string/app_name" />-->
-
-<!--    </com.google.android.material.appbar.AppBarLayout>-->
-
-<!--    <ImageView-->
-<!--        android:id="@+id/btnFilter"-->
-<!--        android:layout_width="@dimen/_30sdp"-->
-<!--        android:layout_height="@dimen/_50sdp"-->
-<!--        android:layout_gravity="end"-->
-<!--        android:src="@drawable/ic_baseline_filter_alt_24"-->
-<!--        app:tint="#342ea9" />-->
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/storeRv"
+    <FrameLayout
+        android:id="@+id/frame"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        android:paddingBottom="70dp"
-        android:clipToPadding="false"
-        app:spanCount="2" />
+        android:layout_height="match_parent"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        tools:context=".fragment.HomeScreenFragment">
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/btn_addStore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:contentDescription="Add Store"
-        android:fontFamily="@font/catamaran"
-        android:text="Add Store"
-        android:gravity="center_horizontal"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        app:backgroundTint="@color/teal_200"
-        app:icon="@drawable/ic_baseline_add_24"
-        app:iconTint="@color/white" />
+        <!-- TODO: Update blank fragment layout -->
 
-</FrameLayout>
+        <!--    <com.google.android.material.appbar.AppBarLayout-->
+
+        <!--        android:id="@+id/appBarLayout"-->
+        <!--        style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:fitsSystemWindows="true">-->
+
+        <!--        <com.google.android.material.appbar.MaterialToolbar-->
+        <!--            android:id="@+id/topAppBar"-->
+        <!--            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="?attr/actionBarSize"-->
+        <!--            android:background="@android:color/transparent"-->
+        <!--            android:elevation="0dp"-->
+        <!--            app:title="@string/app_name" />-->
+
+        <!--    </com.google.android.material.appbar.AppBarLayout>-->
+
+        <!--    <ImageView-->
+        <!--        android:id="@+id/btnFilter"-->
+        <!--        android:layout_width="@dimen/_30sdp"-->
+        <!--        android:layout_height="@dimen/_50sdp"-->
+        <!--        android:layout_gravity="end"-->
+        <!--        android:src="@drawable/ic_baseline_filter_alt_24"-->
+        <!--        app:tint="#342ea9" />-->
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/storeRv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            android:paddingBottom="70dp"
+            android:clipToPadding="false"
+            app:spanCount="2" />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/btn_addStore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:contentDescription="Add Store"
+            android:fontFamily="@font/catamaran"
+            android:text="Add Store"
+            android:gravity="center_horizontal"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:backgroundTint="@color/teal_200"
+            app:icon="@drawable/ic_baseline_add_24"
+            app:iconTint="@color/white" />
+
+    </FrameLayout>
+</layout>
