--- a/app/src/main/res/layout/header_black.xml
+++ b/app/src/main/res/layout/header_black.xml
@@ -1,37 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layoutHeaderBase"
-    android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:background="@android:color/transparent"
-    android:theme="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/imgBack"
-        android:layout_width="@dimen/_35sdp"
-        android:layout_height="@dimen/_35sdp"
-        android:layout_centerVertical="true"
-        android:padding="@dimen/_8sdp"
-        android:elevation="0dp"
-        android:layout_marginStart="@dimen/_5sdp"
-        android:src="@drawable/back_white"
-        android:layout_marginLeft="@dimen/_5sdp" />
+    <data>
+
+    </data>
+
+    <RelativeLayout
+        android:id="@+id/layoutHeaderBase"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/transparent"
+        android:theme="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imgBack"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_centerVertical="true"
+            android:padding="@dimen/_8sdp"
+            android:elevation="0dp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:src="@drawable/back_white"
+            android:layout_marginLeft="@dimen/_5sdp" />
 
 
-    <TextView
-        android:id="@+id/txtTitle"
-        android:elevation="0dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/catamaran"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="80dp"
-        android:gravity="center_vertical"
-        android:textColor="#ffffff"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/txtTitle"
+            android:elevation="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/catamaran"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="80dp"
+            android:gravity="center_vertical"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
