--- a/app/src/main/res/layout/otpdlg.xml
+++ b/app/src/main/res/layout/otpdlg.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <EditText
-        android:id="@+id/votp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="89dp"
-        android:layout_marginTop="55dp"
-        android:ems="10"
-        android:hint="Enter OTP"
-        android:inputType="number"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/cotp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
-        android:text="VERIFY"
-        style="@style/Button_pink_caps"
-        app:layout_constraintEnd_toEndOf="@+id/votp"
-        app:layout_constraintStart_toStartOf="@+id/votp"
-        app:layout_constraintTop_toBottomOf="@+id/votp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <EditText
+            android:id="@+id/votp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="89dp"
+            android:layout_marginTop="55dp"
+            android:ems="10"
+            android:hint="Enter OTP"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/cotp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="27dp"
+            android:text="VERIFY"
+            style="@style/Button_pink_caps"
+            app:layout_constraintEnd_toEndOf="@+id/votp"
+            app:layout_constraintStart_toStartOf="@+id/votp"
+            app:layout_constraintTop_toBottomOf="@+id/votp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
