--- a/app/src/main/res/layout/store_details.xml
+++ b/app/src/main/res/layout/store_details.xml
@@ -1,81 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rv"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-<!--    android:layout_marginBottom="@dimen/_55sdp"
--->
-    <ScrollView
+    xmlns:tools="http://schemas.android.com/tools">
 
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:fillViewport="true"
-        android:scrollbarThumbVertical="@android:color/transparent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <data>
 
+    </data>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/storeCv"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            app:cardCornerRadius="16dp"
-            android:padding="@dimen/_10sdp"
-            app:cardElevation="10dp"
-            app:cardMaxElevation="5dp"
-            app:cardPreventCornerOverlap="true"
-            app:cardUseCompatPadding="true"
-            app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!--    android:layout_marginBottom="@dimen/_55sdp"
+        -->
+        <ScrollView
+
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fillViewport="true"
+            android:scrollbarThumbVertical="@android:color/transparent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.099">
-
-            <ImageView
-                android:id="@+id/fav"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_3sdp"
-                android:layout_marginRight="@dimen/_5sdp"
-                android:layout_gravity="top|right"
-                app:srcCompat="@drawable/ic_baseline_favorite_24"
-                app:tint="@color/dark_blue"
-                tools:ignore="VectorDrawableCompat" />
+            app:layout_constraintTop_toTopOf="parent">
 
 
-            <LinearLayout
+            <androidx.cardview.widget.CardView
+                android:id="@+id/storeCv"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="@dimen/_20sdp"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                app:cardCornerRadius="16dp"
+                android:padding="@dimen/_10sdp"
+                app:cardElevation="10dp"
+                app:cardMaxElevation="5dp"
+                app:cardPreventCornerOverlap="true"
+                app:cardUseCompatPadding="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.099">
 
                 <ImageView
-                    android:id="@+id/storeRvImg"
+                    android:id="@+id/fav"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_50sdp"
-                    android:layout_gravity="center_horizontal" />
-
-                <TextView
-                    android:id="@+id/storeImtit"
-                    android:layout_width="153dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/catamaran"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:layout_marginRight="@dimen/_5sdp"
+                    android:layout_gravity="top|right"
+                    app:srcCompat="@drawable/ic_baseline_favorite_24"
+                    app:tint="@color/dark_blue"
+                    tools:ignore="VectorDrawableCompat" />
 
-            </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_margin="@dimen/_20sdp"
+                    android:orientation="vertical">
 
-    </ScrollView>
+                    <ImageView
+                        android:id="@+id/storeRvImg"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_50sdp"
+                        android:layout_gravity="center_horizontal" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:id="@+id/storeImtit"
+                        android:layout_width="153dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/catamaran"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
